--- a/css/styles.css
+++ b/css/styles.css
@@ -113,7 +113,7 @@ img.grayscale {
 /* use alt in navbar and header for different color */
 
 .alt {
-  background-color: #6E28C9;
+  background-color: #3DA428;
 }
 
 .alt .lead {
